@@ -10,6 +10,10 @@ Working version
   of `caml_read_directory`.  Also, check for overflows in ext table sizes.
   (Xavier Leroy, report by Arseniy Alekseyev, review by Gabriel Scherer)
 
+- #12223: Constify constructors and flags tables in C code. Now these
+  tables will go in the readonly segment, where they belong.
+  (Antonin Décimo, review by Gabriel Scherer and Xavier Leroy)
+
 ### Code generation and optimizations:
 
 ### Standard library:
